--- a/package.json
+++ b/package.json
@@ -8,5 +8,23 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9"
-  }
+  },
+  "name": "wd_assignment2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/d-simmons/WD_Assignment2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/d-simmons/WD_Assignment2/issues"
+  },
+  "homepage": "https://github.com/d-simmons/WD_Assignment2#readme"
 }
